[metadata]
name = pansim
description = A distributed pandemic simulator
url = http://github.com/nssac/pansim

long_description = file: README.rst
license = Apache License 2.0

author = Parantapa Bhattacharya
author_email = pb+pypi@parantapa.net

classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
zip_safe = False

packages = find:
package_dir =
    =src

python_requires = >=3.8
setup_requires =
    setuptools_scm
    cython
    numpy

install_requires =
    click
    click_completion
    numpy
    pandas
    pyarrow
    toml
    Vose-Alias-Method
    tqdm
    py4j
    cython
    xactor

[options.entry_points]
console_scripts =
    pansim = pansim.cli:cli
